@@ -1,6 +1,7 @@
 == News
 
 - 0.3 -
+  * MySQL collation comparison support
   * ...
 
 - 0.2 -
